* Wed Sep 02 2020 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.3.0-0
- Added the following classes
  - polkit::install
  - polkit::service
  - polkit::user
- Ensure that the polkit user is managed by default and placed into the
  supplementary group bound to the 'gid' option on '/proc' if one is set to work
  around issues with 'hidepid' > 0.

* Tue Dec 24 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.2.0-0
- Add EL8 support
- Drop EL6 support (it was non-functional)
- Fix issue with basic_policy template that resulted in malformed rules
- Add acceptance tests

* Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 6.2.0-0
- Drop Puppet 4 support
- Add Puppet 6 support
- Add puppetlabs-stdlib 6 support

* Thu Mar 07 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.2-0
- Update the upper bound of stdlib to < 6.0.0
- Update a URL in the README.md

* Sat Mar 24 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.1.1-0
- Add support for OEL and Puppet 5
- Update badges and contribution guide URL in README.md

* Wed Jun 21 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.0-0
- Update custom Puppet 3 functions to namespaced, Puppet 4 functions
- Allow default identity and identities prefixed with unix-netgroup.
- Confine puppet version in metadata.json

* Mon Apr 17 2017 Nick Miller <nick.miller@onyxpoint.com> - 6.1.0-0
- Add EL7 and polkit 106+ support by allowing javascript rules
  - Added define to allow for easy placement of custom rules
  - Added templated define to ease generation of basic rules

* Mon Dec 19 2016 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 6.0.0-0
- Strong Typing
- Code cleanup

* Tue Nov 22 2016 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 5.0.0-0
- Major version bump for SIMP 6

* Mon Nov 21 2016 Chris Tessmer <chris.tessmer@onypoint.com> - 4.1.2-0
- Remove compliance_map and general housekeeping

* Mon Nov 09 2015 Chris Tessmer <chris.tessmer@onypoint.com> - 4.1.0-2
- migration to simplib and simpcat (lib/ only)
